Add the ability to share

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -40,7 +40,7 @@
             app:destination="@id/gameFragment"
             app:popUpTo="@id/titleFragment" />
         <argument
-            android:name="numQuetions"
+            android:name="numQuestions"
             app:argType="integer" />
         <argument
             android:name="numCorrect"
